# Light-Show-Toolkit-

./: .gitignore  .gitmodules  BinLight_SYSFS.cpp  BinLight_SYSFS.h  BinaryLight.cpp  BinaryLight.h  BinaryLightController.cpp  BinaryLightController.h  CMakeLists.txt  Color_Combiner.cpp  Colour.cpp  Colour.h  ColourChangeEvent.h  ColourListiner.cpp  ColourListiner.h  CommandDataTypes.cpp  CommandFactory.cpp  CommandFactory.h  CommandLineInterface.cpp  CommandLineInterface.h  ConsoleLight.cpp  ConsoleLight.h  Example.ls  FileParserHandler.cpp  FileReader.h  GroupManager.cpp  GroupManager.h  LightShowFileReader.cpp  LightShowFileReader.h  LightShowPlayer.h  Makefile  MiLightSettings.txt  Milight.cpp  Milight.h  NetworkPacketSender.cpp  NetworkPacketSender.h  ProgrammableLight.cpp  ProgrammableLight.h  README.md  RF24_Sender.cpp  (+12 more)
433/: BL_433.cpp  BL_433.h  CMakeLists.txt  Factory_433.cpp  Factory_433.h
Grammar/: grammar.txt  readme.md
RF24_proj/: CMakeLists.txt  RF24_Factory.cpp  RF24_Factory.h  RF24_GROUPS.txt  RF24_Sender.cpp  RF24_Sender.h
SampleFiles/: TestFile.txt
src/: AudioPlayer_Dummy.h  BinLight_SYSFS.cpp  BinLight_SYSFS.h  BinaryLight.cpp  BinaryLight.h  BinaryLightController.h  CMakeCache.txt  CMakeLists.txt  Color_Combiner.cpp  Colour.cpp  Colour.h  ColourChangeEvent.h  ColourListiner.h  Colour_Combiner.cpp  Command.h  CommandDataTypes.cpp  CommandFactory.cpp  CommandFactory.h  CommandLineInterface.cpp  CommandLineInterface.h  CommandOperation.h  CommandType.h  ConsoleLight.cpp  ConsoleLight.h  Example.lightshow  FileParser.h  FileParserHandler.cpp  FileParserHandler.h  FileReader.h  FileSettings.txt  Fileout_Light.h  GPIO_PI.cpp  GPIO_PI.h  GroupManager.cpp  GroupManager.h  LIGHT_COMMAND_TYPE.h  LightShowFileReader.cpp  LightShowFileReader.h  LightShowPlayer.h  Light_Command.h  (+24 more)
src/config/: MILIGHT_CONFIG.txt
src/groups/: SDL_LIGHT_PROXY.txt
synchroniser/: main.py
synchroniser/Server_One/config/: RF24_CONFIG.txt
synchroniser/Server_Two/config/: RF24_CONFIG.txt
synchroniser/Server_Two/groups/: BL_433_GROUPS.txt
synchroniser/Songs/: Example.lightshow
